src/test/deca/etapeB/invalid/and.deca
// Description : 
// 	test d'operation Booléen sur des variable de type non booléen 
//Resultat:
//      Erreur Contextuelle :
//      Ligne 7 : /src/test/deca/etapeB/invalid/and.deca:7:6: this operation can be done only on boolean types
{
	if ( 3 && 5 ){
	   println("this text shouldn't be printed");
	}
}